--- a/app/src/main/res/layout/item_moni_alarm.xml
+++ b/app/src/main/res/layout/item_moni_alarm.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay_moni_alarm"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@color/colorAccent"
         android:gravity="center_vertical"
@@ -177,6 +177,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="알람 발생 조건 받아오기"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit= "marquee_forever"
             app:layout_constraintBottom_toBottomOf="@+id/txt_alarm_moni_if_back"
             app:layout_constraintStart_toEndOf="@+id/txt_alarm_moni_if_back"
             app:layout_constraintTop_toTopOf="@+id/txt_alarm_moni_if_back" />
