--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -8,28 +8,6 @@
     android:background="@color/회색"
     android:orientation="vertical">
 
-    <ProgressBar
-        android:id="@+id/progressbar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></ProgressBar>
-
-
-    <ImageView
-        android:id="@+id/img_techcenter"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="16dp"
-        android:onClick="TechcenterClicked"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ktlogo_techservice" />
 
     <ImageView
         android:id="@+id/bar_bottom"
@@ -55,11 +33,10 @@
             <ImageView
                 android:id="@+id/layout_1"
                 android:layout_width="0dp"
-                android:layout_height="400dp"
+                android:layout_height="180dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="225dp"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/bar_alarm"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -68,15 +45,14 @@
             <ImageView
                 android:id="@+id/layout_2"
                 android:layout_width="0dp"
-                android:layout_height="150dp"
+                android:layout_height="200dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/layout_1"
-                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@color/colorAccent" />
 
             <TextView
@@ -120,9 +96,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="16dp"
                 android:layout_marginStart="40dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/textboxline"
                 android:gravity="center"
+                android:text="전체"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@+id/txt_요금"
                 app:layout_constraintEnd_toEndOf="@+id/txt_요금"
                 app:layout_constraintStart_toStartOf="@+id/txt_요금"
@@ -130,14 +106,14 @@
 
             <TextView
                 android:id="@+id/txt_요금"
-                android:layout_width="189dp"
+                android:layout_width="140dp"
                 android:layout_height="20dp"
                 android:layout_marginStart="14dp"
-                android:layout_marginTop="2dp"
                 android:layout_marginEnd="24dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:textSize="14sp"
+                android:text="ZONE : "
+                android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/lay_server"
                 app:layout_constraintEnd_toEndOf="@+id/layout_1"
                 app:layout_constraintStart_toEndOf="@+id/txt_사용정보"
@@ -179,7 +155,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/lay_server"
                 android:layout_width="0dp"
-                android:layout_height="148dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 app:layout_constraintEnd_toEndOf="@+id/layout_1"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -187,16 +163,25 @@
                 app:layout_constraintTop_toBottomOf="@+id/txt_사용정보">
 
                 <TextView
+                    android:id="@+id/txt_server_state"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:text="TextView"
+                    app:layout_constraintBottom_toBottomOf="@+id/txt_server_number"
+                    app:layout_constraintStart_toEndOf="@+id/txt_server_number"
+                    app:layout_constraintTop_toTopOf="@+id/txt_server_number" />
+
+                <TextView
                     android:id="@+id/txt_server_number"
                     android:layout_width="wrap_content"
                     android:layout_height="18dp"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="80dp"
                     android:background="@drawable/textboxline"
                     android:gravity="center_horizontal"
                     android:onClick="ServerClicked"
                     android:text="사용 중"
                     app:layout_constraintBottom_toBottomOf="@+id/editText7"
-                    app:layout_constraintEnd_toEndOf="@+id/editText7"
                     app:layout_constraintStart_toStartOf="@+id/editText7"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.533" />
@@ -215,7 +200,7 @@
 
                 <TextView
                     android:id="@+id/editText7"
-                    android:layout_width="112dp"
+                    android:layout_width="250dp"
                     android:layout_height="44dp"
                     android:layout_marginStart="20dp"
                     android:ems="5"
@@ -226,17 +211,6 @@
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@+id/btn_server"
                     app:layout_constraintTop_toTopOf="@+id/btn_server" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView_server"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="8dp"
-                    android:background="#F0F0F0"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText7" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -257,24 +231,33 @@
                 app:layout_constraintVertical_bias="1.0">
 
                 <TextView
+                    android:id="@+id/txt_db_state"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:text="TextView"
+                    app:layout_constraintBottom_toBottomOf="@+id/txt_monitoring_number"
+                    app:layout_constraintStart_toEndOf="@+id/txt_monitoring_number"
+                    app:layout_constraintTop_toTopOf="@+id/txt_monitoring_number" />
+
+                <TextView
                     android:id="@+id/txt_monitoring_number"
                     android:layout_width="wrap_content"
                     android:layout_height="18dp"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="80dp"
                     android:background="@drawable/textboxline"
                     android:gravity="center_horizontal"
                     android:onClick="DBClicked"
                     android:text="사용 중"
                     app:layout_constraintBottom_toBottomOf="@+id/editText8"
-                    app:layout_constraintEnd_toEndOf="@+id/editText8"
                     app:layout_constraintStart_toStartOf="@+id/editText8"
                     app:layout_constraintTop_toTopOf="@+id/editText8" />
 
                 <TextView
                     android:id="@+id/editText8"
-                    android:layout_width="112dp"
+                    android:layout_width="250dp"
                     android:layout_height="39dp"
-                    android:layout_marginStart="20dp"
+                    android:layout_marginStart="22dp"
                     android:ems="7"
                     android:gravity="left|center_vertical"
                     android:inputType="textPersonName"
@@ -295,128 +278,43 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView_monitoring"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="8dp"
-                    android:background="#F0F0F0"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText8"
-                    app:layout_constraintVertical_bias="1.0" />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
-    <TextView
-        android:id="@+id/txt_monitoring"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="230dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginBottom="3dp"
-        android:text="MONITORING"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/bar_bottom"
-        app:layout_constraintTop_toTopOf="@+id/bar_bottom" />
-
     <ImageView
         android:id="@+id/img_dashboard"
-        android:layout_width="47dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="18dp"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="30dp"
         android:onClick="DashboardClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ktlogo_cloud2" />
+        app:layout_constraintTop_toTopOf="@+id/bar_bottom"
+        app:srcCompat="@drawable/ic_btn_home" />
 
     <ImageView
         android:id="@+id/img_monitoirng"
-        android:layout_width="47dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="130dp"
-        android:layout_marginBottom="18dp"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="30dp"
         android:onClick="MonitoringClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/bar_bottom"
-        app:layout_constraintStart_toEndOf="@+id/img_service"
-        app:srcCompat="@drawable/ktlogo_monitoring3" />
-
-    <TextView
-        android:id="@+id/txt_dashboard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginBottom="3dp"
-        android:text="DASHBOARD"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/bar_bottom" />
-
-    <TextView
-        android:id="@+id/txt_service"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginBottom="3dp"
-        android:text="SERVICE"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/bar_bottom"
-        app:layout_constraintTop_toTopOf="@+id/bar_bottom" />
-
-    <TextView
-        android:id="@+id/txt_payment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="41dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="3dp"
-        android:text="SETTING"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/bar_bottom" />
-
-    <ImageView
-        android:id="@+id/img_payment"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/img_monitoirng"
-        app:srcCompat="@drawable/payment" />
+        app:layout_constraintTop_toTopOf="@+id/bar_bottom"
+        app:srcCompat="@drawable/ic_btn_monitoring" />
 
     <ImageView
         android:id="@+id/img_service"
-        android:layout_width="47dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="225dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
         android:onClick="ServiceClicked"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/img_monitoirng"
         app:layout_constraintStart_toEndOf="@+id/img_dashboard"
-        app:srcCompat="@drawable/service_2" />
+        app:layout_constraintTop_toTopOf="@+id/bar_bottom"
+        app:srcCompat="@drawable/ic_btn_service" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
