--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#F4F4F4</color>
     <color name="colorPrimaryDark">#D8D8D8</color>
     <color name="colorAccent">#FFFFFF</color>
-    <color name="상단민트">#94D1CA</color>
+    <color name="상단민트">#2CBBB6</color>
     <color name="빨간글자">#FF3C35</color>
     <color name="주황색글자">#FF7235</color>
     <color name="초록글자">#1F7439</color>
