--- a/app/src/main/res/layout/service_main.xml
+++ b/app/src/main/res/layout/service_main.xml
@@ -320,95 +320,46 @@
         app:layout_constraintStart_toEndOf="@+id/btn_NAS"
         app:layout_constraintTop_toBottomOf="@+id/txt_NAS_main_title" />
 
-    <TextView
-        android:id="@+id/txt_monitoring"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="41dp"
-        android:layout_marginBottom="3dp"
-        android:text="MONITORING"
-        android:textSize="12sp"
-        android:textStyle="bold"
+    <ImageView
+        android:id="@+id/bar_bottom"
+        android:layout_width="412dp"
+        android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txt_service" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@color/상단민트" />
 
     <ImageView
         android:id="@+id/img_dashboard"
-        android:layout_width="47dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginBottom="18dp"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="30dp"
         android:onClick="DashboardClicked"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ktlogo_cloud2" />
+        app:layout_constraintBottom_toBottomOf="@id/bar_bottom"
+        app:layout_constraintStart_toStartOf="@id/bar_bottom"
+        app:layout_constraintTop_toTopOf="@+id/bar_bottom"
+        app:srcCompat="@drawable/ic_btn_home" />
 
     <ImageView
         android:id="@+id/img_monitoirng"
-        android:layout_width="47dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginBottom="18dp"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="30dp"
         android:onClick="MonitoringClicked"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/img_service"
-        app:srcCompat="@drawable/ktlogo_monitoring3" />
-
-    <TextView
-        android:id="@+id/txt_dashboard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="3dp"
-        android:text="DASHBOARD"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/txt_service"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="41dp"
-        android:layout_marginBottom="3dp"
-        android:text="SERVICE"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txt_dashboard" />
-
-    <TextView
-        android:id="@+id/txt_payment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="34dp"
-        android:layout_marginBottom="3dp"
-        android:text="SETTING"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <ImageView
-        android:id="@+id/img_payment"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/img_monitoirng"
-        app:srcCompat="@drawable/payment" />
+        app:layout_constraintBottom_toBottomOf="@id/bar_bottom"
+        app:layout_constraintEnd_toEndOf="@+id/bar_bottom"
+        app:layout_constraintTop_toTopOf="@+id/bar_bottom"
+        app:srcCompat="@drawable/ic_btn_monitoring" />
 
     <ImageView
         android:id="@+id/img_service"
-        android:layout_width="47dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
         android:onClick="ServiceClicked"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/bar_bottom"
+        app:layout_constraintEnd_toStartOf="@+id/img_monitoirng"
         app:layout_constraintStart_toEndOf="@+id/img_dashboard"
-        app:srcCompat="@drawable/service_2" />
+        app:layout_constraintTop_toTopOf="@+id/bar_bottom"
+        app:srcCompat="@drawable/ic_btn_service" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
