--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -9,14 +9,6 @@
     android:orientation="vertical">
 
 
-    <ImageView
-        android:id="@+id/bar_bottom"
-        android:layout_width="412dp"
-        android:layout_height="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@color/상단민트" />
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -98,7 +90,7 @@
                 android:layout_marginStart="40dp"
                 android:gravity="center"
                 android:text="전체"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/txt_요금"
                 app:layout_constraintEnd_toEndOf="@+id/txt_요금"
                 app:layout_constraintStart_toStartOf="@+id/txt_요금"
@@ -113,7 +105,7 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text="ZONE : "
-                android:textSize="18sp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/lay_server"
                 app:layout_constraintEnd_toEndOf="@+id/layout_1"
                 app:layout_constraintStart_toEndOf="@+id/txt_사용정보"
@@ -284,13 +276,22 @@
     </ScrollView>
 
     <ImageView
+        android:id="@+id/bar_bottom"
+        android:layout_width="412dp"
+        android:layout_height="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@color/상단민트" />
+
+    <ImageView
         android:id="@+id/img_dashboard"
         android:layout_width="70dp"
         android:layout_height="60dp"
         android:layout_marginStart="30dp"
         android:onClick="DashboardClicked"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/bar_bottom"
+        app:layout_constraintStart_toStartOf="@id/bar_bottom"
         app:layout_constraintTop_toTopOf="@+id/bar_bottom"
         app:srcCompat="@drawable/ic_btn_home" />
 
@@ -300,7 +301,7 @@
         android:layout_height="60dp"
         android:layout_marginEnd="30dp"
         android:onClick="MonitoringClicked"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/bar_bottom"
         app:layout_constraintEnd_toEndOf="@+id/bar_bottom"
         app:layout_constraintTop_toTopOf="@+id/bar_bottom"
         app:srcCompat="@drawable/ic_btn_monitoring" />
@@ -310,7 +311,7 @@
         android:layout_width="70dp"
         android:layout_height="60dp"
         android:onClick="ServiceClicked"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/bar_bottom"
         app:layout_constraintEnd_toStartOf="@+id/img_monitoirng"
         app:layout_constraintStart_toEndOf="@+id/img_dashboard"
         app:layout_constraintTop_toTopOf="@+id/bar_bottom"
