--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -86,11 +86,12 @@
             <TextView
                 android:id="@+id/txt_금액"
                 android:layout_width="wrap_content"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
                 android:gravity="center"
                 android:text="전체"
-                android:textSize="14sp"
+                android:textSize="13sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/txt_요금"
                 app:layout_constraintEnd_toEndOf="@+id/txt_요금"
                 app:layout_constraintStart_toStartOf="@+id/txt_요금"
@@ -173,6 +174,7 @@
                     android:gravity="center_horizontal"
                     android:onClick="ServerClicked"
                     android:text="사용 중"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/editText7"
                     app:layout_constraintStart_toStartOf="@+id/editText7"
                     app:layout_constraintTop_toTopOf="parent"
@@ -241,6 +243,7 @@
                     android:gravity="center_horizontal"
                     android:onClick="DBClicked"
                     android:text="사용 중"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/editText8"
                     app:layout_constraintStart_toStartOf="@+id/editText8"
                     app:layout_constraintTop_toTopOf="@+id/editText8" />
